tests/invalid/function/generic_item_value_no_expected_fn.facet
fn id<T>(x: affine T) -> affine T {
  x
}

fn main() -> affine isize {
  let f = id in
  (f 1)
}
